# UAV_monitoring_platform

./: README.md
UAV_backend/: README.md  app.py  models.py  pyproject.toml
